xcchlib-samples fix